antlr_generated/SigmaScriptParser.py
# Generated from SigmaScript.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SigmaScriptParser ( Parser ):

    grammarFileName = "SigmaScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'calkowita'", "'rzeczywista'", "'logiczna'", 
                     "'tekst'", "'pusta'", "'struktura'", "'funkcja'", "'zwroc'", 
                     "'prawda'", "'falsz'", "'naprzod'", "'obroc'", "'powtorz'", 
                     "'dopoki'", "'jezeli'", "'inaczej'", "'wypisz'", "'ustaw'", 
                     "'oraz'", "'lub'", "'nie'", "'+'", "'-'", "'*'", "'/'", 
                     "'='", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "'.'", "','" ]

    symbolicNames = [ "<INVALID>", "CALKOWITA", "RZECZYWISTA", "LOGICZNA", 
                      "TEKST_TYP", "PUSTA", "STRUKTURA", "FUNKCJA", "ZWROC", 
                      "PRAWDA", "FALSZ", "NAPRZOD", "OBROC", "POWTORZ", 
                      "DOPOKI", "JEZELI", "INACZEJ", "WYPISZ", "USTAW", 
                      "ORAZ", "LUB", "NIE", "PLUS", "MINUS", "RAZY", "PRZEZ", 
                      "PRZYPIS", "ROWNY", "ROZNY", "MNIEJ_ROWN", "WIEC_ROWN", 
                      "MNIEJSZY", "WIEKSZY", "L_NAWIAS", "P_NAWIAS", "L_KLAMRA", 
                      "P_KLAMRA", "L_KWADRAT", "P_KWADRAT", "KROPKA", "PRZECINEK", 
                      "LICZ_CALK", "LICZ_RZECZ", "IDENT", "TEKST", "WS", 
                      "COMMENT" ]

    RULE_program = 0
    RULE_definicja = 1
    RULE_definicja_struktury = 2
    RULE_definicja_funkcji = 3
    RULE_parametry = 4
    RULE_parametr = 5
    RULE_typ_zwracany = 6
    RULE_typ = 7
    RULE_wymiar_tablicy = 8
    RULE_blok_kodu = 9
    RULE_instrukcja = 10
    RULE_polecenie_ruchu = 11
    RULE_polecenie_obrotu = 12
    RULE_petla = 13
    RULE_petla_warunkowa = 14
    RULE_instrukcja_warunkowa = 15
    RULE_wypisanie = 16
    RULE_deklaracja_zmiennej = 17
    RULE_przypisanie = 18
    RULE_instrukcja_zwrotu = 19
    RULE_odwolanie = 20
    RULE_wywolanie_funkcji = 21
    RULE_argumenty = 22
    RULE_inicjalizacja_tablicy = 23
    RULE_wyrazenie_ogolne = 24
    RULE_wyrazenie_logiczne = 25
    RULE_operator_rel = 26
    RULE_wyrazenie_arytmetyczne = 27

    ruleNames =  [ "program", "definicja", "definicja_struktury", "definicja_funkcji", 
                   "parametry", "parametr", "typ_zwracany", "typ", "wymiar_tablicy", 
                   "blok_kodu", "instrukcja", "polecenie_ruchu", "polecenie_obrotu", 
                   "petla", "petla_warunkowa", "instrukcja_warunkowa", "wypisanie", 
                   "deklaracja_zmiennej", "przypisanie", "instrukcja_zwrotu", 
                   "odwolanie", "wywolanie_funkcji", "argumenty", "inicjalizacja_tablicy", 
                   "wyrazenie_ogolne", "wyrazenie_logiczne", "operator_rel", 
                   "wyrazenie_arytmetyczne" ]

    EOF = Token.EOF
    CALKOWITA=1
    RZECZYWISTA=2
    LOGICZNA=3
    TEKST_TYP=4
    PUSTA=5
    STRUKTURA=6
    FUNKCJA=7
    ZWROC=8
    PRAWDA=9
    FALSZ=10
    NAPRZOD=11
    OBROC=12
    POWTORZ=13
    DOPOKI=14
    JEZELI=15
    INACZEJ=16
    WYPISZ=17
    USTAW=18
    ORAZ=19
    LUB=20
    NIE=21
    PLUS=22
    MINUS=23
    RAZY=24
    PRZEZ=25
    PRZYPIS=26
    ROWNY=27
    ROZNY=28
    MNIEJ_ROWN=29
    WIEC_ROWN=30
    MNIEJSZY=31
    WIEKSZY=32
    L_NAWIAS=33
    P_NAWIAS=34
    L_KLAMRA=35
    P_KLAMRA=36
    L_KWADRAT=37
    P_KWADRAT=38
    KROPKA=39
    PRZECINEK=40
    LICZ_CALK=41
    LICZ_RZECZ=42
    IDENT=43
    TEKST=44
    WS=45
    COMMENT=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SigmaScriptParser.EOF, 0)

        def definicja(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SigmaScriptParser.DefinicjaContext)
            else:
                return self.getTypedRuleContext(SigmaScriptParser.DefinicjaContext,i)


        def getRuleIndex(self):
            return SigmaScriptParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SigmaScriptParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8796093479390) != 0):
                self.state = 56
                self.definicja()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.match(SigmaScriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinicjaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instrukcja(self):
            return self.getTypedRuleContext(SigmaScriptParser.InstrukcjaContext,0)


        def definicja_struktury(self):
            return self.getTypedRuleContext(SigmaScriptParser.Definicja_strukturyContext,0)


        def definicja_funkcji(self):
            return self.getTypedRuleContext(SigmaScriptParser.Definicja_funkcjiContext,0)


        def getRuleIndex(self):
            return SigmaScriptParser.RULE_definicja

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinicja" ):
                listener.enterDefinicja(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinicja" ):
                listener.exitDefinicja(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinicja" ):
                return visitor.visitDefinicja(self)
            else:
                return visitor.visitChildren(self)




    def definicja(self):

        localctx = SigmaScriptParser.DefinicjaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definicja)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3, 4, 8, 11, 12, 13, 14, 15, 17, 18, 43]:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.instrukcja()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.definicja_struktury()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 66
                self.definicja_funkcji()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Definicja_strukturyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUKTURA(self):
            return self.getToken(SigmaScriptParser.STRUKTURA, 0)

        def IDENT(self):
            return self.getToken(SigmaScriptParser.IDENT, 0)

        def L_KLAMRA(self):
            return self.getToken(SigmaScriptParser.L_KLAMRA, 0)

        def P_KLAMRA(self):
            return self.getToken(SigmaScriptParser.P_KLAMRA, 0)

        def deklaracja_zmiennej(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SigmaScriptParser.Deklaracja_zmiennejContext)
            else:
                return self.getTypedRuleContext(SigmaScriptParser.Deklaracja_zmiennejContext,i)


        def getRuleIndex(self):
            return SigmaScriptParser.RULE_definicja_struktury

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinicja_struktury" ):
                listener.enterDefinicja_struktury(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinicja_struktury" ):
                listener.exitDefinicja_struktury(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinicja_struktury" ):
                return visitor.visitDefinicja_struktury(self)
            else:
                return visitor.visitChildren(self)




    def definicja_struktury(self):

        localctx = SigmaScriptParser.Definicja_strukturyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_definicja_struktury)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(SigmaScriptParser.STRUKTURA)
            self.state = 70
            self.match(SigmaScriptParser.IDENT)
            self.state = 71
            self.match(SigmaScriptParser.L_KLAMRA)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8796093022238) != 0):
                self.state = 72
                self.deklaracja_zmiennej()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(SigmaScriptParser.P_KLAMRA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Definicja_funkcjiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNKCJA(self):
            return self.getToken(SigmaScriptParser.FUNKCJA, 0)

        def typ_zwracany(self):
            return self.getTypedRuleContext(SigmaScriptParser.Typ_zwracanyContext,0)


        def IDENT(self):
            return self.getToken(SigmaScriptParser.IDENT, 0)

        def L_NAWIAS(self):
            return self.getToken(SigmaScriptParser.L_NAWIAS, 0)

        def P_NAWIAS(self):
            return self.getToken(SigmaScriptParser.P_NAWIAS, 0)

        def blok_kodu(self):
            return self.getTypedRuleContext(SigmaScriptParser.Blok_koduContext,0)


        def parametry(self):
            return self.getTypedRuleContext(SigmaScriptParser.ParametryContext,0)


        def getRuleIndex(self):
            return SigmaScriptParser.RULE_definicja_funkcji

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinicja_funkcji" ):
                listener.enterDefinicja_funkcji(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinicja_funkcji" ):
                listener.exitDefinicja_funkcji(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinicja_funkcji" ):
                return visitor.visitDefinicja_funkcji(self)
            else:
                return visitor.visitChildren(self)




    def definicja_funkcji(self):

        localctx = SigmaScriptParser.Definicja_funkcjiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_definicja_funkcji)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(SigmaScriptParser.FUNKCJA)
            self.state = 81
            self.typ_zwracany()
            self.state = 82
            self.match(SigmaScriptParser.IDENT)
            self.state = 83
            self.match(SigmaScriptParser.L_NAWIAS)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8796093022238) != 0):
                self.state = 84
                self.parametry()


            self.state = 87
            self.match(SigmaScriptParser.P_NAWIAS)
            self.state = 88
            self.blok_kodu()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parametr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SigmaScriptParser.ParametrContext)
            else:
                return self.getTypedRuleContext(SigmaScriptParser.ParametrContext,i)


        def PRZECINEK(self, i:int=None):
            if i is None:
                return self.getTokens(SigmaScriptParser.PRZECINEK)
            else:
                return self.getToken(SigmaScriptParser.PRZECINEK, i)

        def getRuleIndex(self):
            return SigmaScriptParser.RULE_parametry

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametry" ):
                listener.enterParametry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametry" ):
                listener.exitParametry(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametry" ):
                return visitor.visitParametry(self)
            else:
                return visitor.visitChildren(self)




    def parametry(self):

        localctx = SigmaScriptParser.ParametryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parametry)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.parametr()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==40:
                self.state = 91
                self.match(SigmaScriptParser.PRZECINEK)
                self.state = 92
                self.parametr()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(SigmaScriptParser.TypContext,0)


        def IDENT(self):
            return self.getToken(SigmaScriptParser.IDENT, 0)

        def getRuleIndex(self):
            return SigmaScriptParser.RULE_parametr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametr" ):
                listener.enterParametr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametr" ):
                listener.exitParametr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametr" ):
                return visitor.visitParametr(self)
            else:
                return visitor.visitChildren(self)




    def parametr(self):

        localctx = SigmaScriptParser.ParametrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parametr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.typ()
            self.state = 99
            self.match(SigmaScriptParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Typ_zwracanyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(SigmaScriptParser.TypContext,0)


        def PUSTA(self):
            return self.getToken(SigmaScriptParser.PUSTA, 0)

        def getRuleIndex(self):
            return SigmaScriptParser.RULE_typ_zwracany

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTyp_zwracany" ):
                listener.enterTyp_zwracany(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTyp_zwracany" ):
                listener.exitTyp_zwracany(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTyp_zwracany" ):
                return visitor.visitTyp_zwracany(self)
            else:
                return visitor.visitChildren(self)




    def typ_zwracany(self):

        localctx = SigmaScriptParser.Typ_zwracanyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typ_zwracany)
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3, 4, 43]:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.typ()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(SigmaScriptParser.PUSTA)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CALKOWITA(self):
            return self.getToken(SigmaScriptParser.CALKOWITA, 0)

        def RZECZYWISTA(self):
            return self.getToken(SigmaScriptParser.RZECZYWISTA, 0)

        def LOGICZNA(self):
            return self.getToken(SigmaScriptParser.LOGICZNA, 0)

        def TEKST_TYP(self):
            return self.getToken(SigmaScriptParser.TEKST_TYP, 0)

        def IDENT(self):
            return self.getToken(SigmaScriptParser.IDENT, 0)

        def wymiar_tablicy(self):
            return self.getTypedRuleContext(SigmaScriptParser.Wymiar_tablicyContext,0)


        def getRuleIndex(self):
            return SigmaScriptParser.RULE_typ

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTyp" ):
                listener.enterTyp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTyp" ):
                listener.exitTyp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTyp" ):
                return visitor.visitTyp(self)
            else:
                return visitor.visitChildren(self)




    def typ(self):

        localctx = SigmaScriptParser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typ)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 8796093022238) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==37:
                self.state = 106
                self.wymiar_tablicy()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Wymiar_tablicyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_KWADRAT(self):
            return self.getToken(SigmaScriptParser.L_KWADRAT, 0)

        def P_KWADRAT(self):
            return self.getToken(SigmaScriptParser.P_KWADRAT, 0)

        def LICZ_CALK(self):
            return self.getToken(SigmaScriptParser.LICZ_CALK, 0)

        def getRuleIndex(self):
            return SigmaScriptParser.RULE_wymiar_tablicy

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWymiar_tablicy" ):
                listener.enterWymiar_tablicy(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWymiar_tablicy" ):
                listener.exitWymiar_tablicy(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWymiar_tablicy" ):
                return visitor.visitWymiar_tablicy(self)
            else:
                return visitor.visitChildren(self)




    def wymiar_tablicy(self):

        localctx = SigmaScriptParser.Wymiar_tablicyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_wymiar_tablicy)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(SigmaScriptParser.L_KWADRAT)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==41:
                self.state = 110
                self.match(SigmaScriptParser.LICZ_CALK)


            self.state = 113
            self.match(SigmaScriptParser.P_KWADRAT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Blok_koduContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_KLAMRA(self):
            return self.getToken(SigmaScriptParser.L_KLAMRA, 0)

        def P_KLAMRA(self):
            return self.getToken(SigmaScriptParser.P_KLAMRA, 0)

        def instrukcja(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SigmaScriptParser.InstrukcjaContext)
            else:
                return self.getTypedRuleContext(SigmaScriptParser.InstrukcjaContext,i)


        def getRuleIndex(self):
            return SigmaScriptParser.RULE_blok_kodu

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlok_kodu" ):
                listener.enterBlok_kodu(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlok_kodu" ):
                listener.exitBlok_kodu(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlok_kodu" ):
                return visitor.visitBlok_kodu(self)
            else:
                return visitor.visitChildren(self)




    def blok_kodu(self):

        localctx = SigmaScriptParser.Blok_koduContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_blok_kodu)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(SigmaScriptParser.L_KLAMRA)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8796093479198) != 0):
                self.state = 116
                self.instrukcja()
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 122
            self.match(SigmaScriptParser.P_KLAMRA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstrukcjaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def polecenie_ruchu(self):
            return self.getTypedRuleContext(SigmaScriptParser.Polecenie_ruchuContext,0)


        def polecenie_obrotu(self):
            return self.getTypedRuleContext(SigmaScriptParser.Polecenie_obrotuContext,0)


        def petla(self):
            return self.getTypedRuleContext(SigmaScriptParser.PetlaContext,0)


        def petla_warunkowa(self):
            return self.getTypedRuleContext(SigmaScriptParser.Petla_warunkowaContext,0)


        def instrukcja_warunkowa(self):
            return self.getTypedRuleContext(SigmaScriptParser.Instrukcja_warunkowaContext,0)


        def wypisanie(self):
            return self.getTypedRuleContext(SigmaScriptParser.WypisanieContext,0)


        def deklaracja_zmiennej(self):
            return self.getTypedRuleContext(SigmaScriptParser.Deklaracja_zmiennejContext,0)


        def przypisanie(self):
            return self.getTypedRuleContext(SigmaScriptParser.PrzypisanieContext,0)


        def instrukcja_zwrotu(self):
            return self.getTypedRuleContext(SigmaScriptParser.Instrukcja_zwrotuContext,0)


        def wywolanie_funkcji(self):
            return self.getTypedRuleContext(SigmaScriptParser.Wywolanie_funkcjiContext,0)


        def getRuleIndex(self):
            return SigmaScriptParser.RULE_instrukcja

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstrukcja" ):
                listener.enterInstrukcja(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstrukcja" ):
                listener.exitInstrukcja(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstrukcja" ):
                return visitor.visitInstrukcja(self)
            else:
                return visitor.visitChildren(self)




    def instrukcja(self):

        localctx = SigmaScriptParser.InstrukcjaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_instrukcja)
        try:
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.polecenie_ruchu()
                pass
